style.css
body{
    background-color: #6d3636;
}
.mainContainer{
    background-color: #6d3636;
    display : flex;
    flex-direction: row;
    justify-content: center;
}
@font-face {
    font-family: 'munroregular';
    src: url('munro-webfont.woff2') format('woff2'),
         url('munro-webfont.woff') format('woff');
    font-weight: normal;
    font-style: normal;

}
.videoContainer {
    z-index: 1;
    width: 1280;
    min-height: 720;
    background-color: #562424;
    display: flex;
    flex-direction: column;
   align-items : center;

}


.videoContainer p {
    font-family: 'munroregular';
    font-size: 2rem;
    text-align: center;
    color: white;
}
.videoContainer button {
    background-color: #c17171;
    border: none;
    color: yellow;
    text-align: center;
    font-family: 'munroregular';
    font-size: 24px;
    padding: 15px 32px;
    outline: none;
  }
.gameContainer {

    display : flex;
    flex-direction : column;
    height: 600;
    width: 600;
    position: fixed;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    z-index: 2;
    background-color : #924233;
    border : 10px ridge #8f5c68;
    display: none;
}
.gameContainer p{
    font-family: 'munroregular';
    font-size: 1rem;
    text-align: center;
    color: white;

}
.shelfContainer{
    z-index: 2;
    height:250 ;
    width:600;
    display: flex;
    flex-direction: column;
    background-color:	#633b3b;
    justify-content: center;
}
.shelf{
    z-index: 2;
    height:200;
    width:600;
    display: flex;
    flex-direction: row;
    background-color:	#924233;
    justify-content: center;
}

